build: Simplify testing with a shared plugin